fix(style.css): adjust justify-content of card: from space-evenly -> center.

--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -36,13 +36,13 @@
 
 .categories-row-1 {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   margin-top: 20px;
 }
 
 .categories-row-2 {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 .card {
