feat: change font to Poppings.

--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -5,6 +5,10 @@
   padding: 0px;
 }
 
+body {
+  font-family: "Poppins", sans-serif;
+}
+
 .container {
   display: flex;
   flex-direction: column;
