--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -94,6 +94,12 @@ body {
   background-color: rgb(255, 106, 0);
 }
 
+button {
+  cursor: pointer;
+  background-color: white;
+  border: none;
+}
+
 div img {
   width: 50px;
   height: 50px;
