--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -1,1 +1,364 @@
 /* Start coding here */
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+
+h1 {
+  text-align: center;
+  font-size: 40px;
+  color: #183b56;
+  font-family: poppins;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.hightlight {
+  background: linear-gradient(180deg, rgb(255, 255, 255) 50%, #f4a47c 50%);
+}
+
+/* ----------------------------------------------------------------- */
+
+.item-1 {
+  min-width: 333px;
+  min-height: 268px;
+  border-radius: 8px;
+  border: 1px solid rgb(221, 215, 215);
+  position: relative;
+}
+
+.item-1-1 {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.digital-marketing {
+  position: absolute;
+  top: 160px;
+  font-size: 20px;
+  font-family: poppins;
+  font-weight: bold;
+  color: #183b56;
+  margin-left: 20px;
+}
+
+.jobs-opened-digital {
+  position: absolute;
+  top: 200px;
+  font-size: 20px;
+  margin-left: 20px;
+  color: #5a7184;
+}
+
+.item-1-2 {
+  position: absolute;
+  top: 213px;
+  left: 280px;
+}
+
+/* ----------------------------------------------------------------- */
+
+.item-2 {
+  min-width: 333px;
+  min-height: 268px;
+  border-radius: 8px;
+  border: 1px solid rgb(221, 215, 215);
+  position: relative;
+}
+
+.item-2-1 {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.art-and-design {
+  position: absolute;
+  top: 160px;
+  font-size: 20px;
+  font-family: poppins;
+  font-weight: bold;
+  color: #183b56;
+  margin-left: 20px;
+}
+
+.jobs-opened-art {
+  position: absolute;
+  top: 200px;
+  font-size: 20px;
+  margin-left: 20px;
+  color: #5a7184;
+}
+
+.item-2-2 {
+  position: absolute;
+  top: 213px;
+  left: 280px;
+}
+
+/* ----------------------------------------------------------------- */
+
+.item-3 {
+  min-width: 333px;
+  min-height: 268px;
+  border-radius: 8px;
+  border: 1px solid rgb(221, 215, 215);
+  position: relative;
+  background-color: #f8f9fa;
+}
+
+.item-3-1 {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.accouting {
+  position: absolute;
+  top: 160px;
+  font-size: 20px;
+  font-family: poppins;
+  font-weight: bold;
+  color: #183b56;
+  margin-left: 20px;
+}
+
+.jobs-opened-accouting {
+  position: absolute;
+  top: 200px;
+  font-size: 20px;
+  margin-left: 20px;
+  color: #5a7184;
+}
+
+.item-3-2 {
+  position: absolute;
+  top: 213px;
+  left: 280px;
+}
+
+/* ----------------------------------------------------------------- */
+
+.item-4 {
+  min-width: 333px;
+  min-height: 268px;
+  border-radius: 8px;
+  border: 1px solid rgb(221, 215, 215);
+  position: relative;
+}
+
+.item-4-1 {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.photography {
+  position: absolute;
+  top: 160px;
+  font-size: 20px;
+  font-family: poppins;
+  font-weight: bold;
+  color: #183b56;
+  margin-left: 20px;
+}
+
+.jobs-opened-photography {
+  position: absolute;
+  top: 200px;
+  font-size: 20px;
+  margin-left: 20px;
+  color: #5a7184;
+}
+
+.item-4-2 {
+  position: absolute;
+  top: 213px;
+  left: 280px;
+}
+
+/* ----------------------------------------------------------------- */
+
+.item-5 {
+  min-width: 333px;
+  min-height: 268px;
+  border-radius: 8px;
+  border: 1px solid rgb(221, 215, 215);
+  position: relative;
+}
+
+.item-5-1 {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.copywriting {
+  position: absolute;
+  top: 160px;
+  font-size: 20px;
+  font-family: poppins;
+  font-weight: bold;
+  color: #183b56;
+  margin-left: 20px;
+}
+
+.jobs-opened-copywriting {
+  position: absolute;
+  top: 200px;
+  font-size: 20px;
+  margin-left: 20px;
+  color: #5a7184;
+}
+
+.item-5-2 {
+  position: absolute;
+  top: 213px;
+  left: 280px;
+}
+
+/* ----------------------------------------------------------------- */
+
+.item-6 {
+  min-width: 333px;
+  min-height: 268px;
+  border-radius: 8px;
+  border: 1px solid rgb(221, 215, 215);
+  position: relative;
+}
+
+.item-6-1 {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.music {
+  position: absolute;
+  top: 160px;
+  font-size: 20px;
+  font-family: poppins;
+  font-weight: bold;
+  color: #183b56;
+  margin-left: 20px;
+}
+
+.jobs-opened-music {
+  position: absolute;
+  top: 200px;
+  font-size: 20px;
+  margin-left: 20px;
+  color: #5a7184;
+}
+
+.item-6-2 {
+  position: absolute;
+  top: 213px;
+  left: 280px;
+}
+
+/* ----------------------------------------------------------------- */
+
+.item-7 {
+  min-width: 333px;
+  min-height: 268px;
+  border-radius: 8px;
+  border: 1px solid rgb(221, 215, 215);
+  position: relative;
+}
+
+.item-7-1 {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.human-resouces {
+  position: absolute;
+  top: 160px;
+  font-size: 20px;
+  font-family: poppins;
+  font-weight: bold;
+  color: #183b56;
+  margin-left: 20px;
+}
+
+.jobs-opened-human-resouces {
+  position: absolute;
+  top: 200px;
+  font-size: 20px;
+  margin-left: 20px;
+  color: #5a7184;
+}
+
+.item-7-2 {
+  position: absolute;
+  top: 213px;
+  left: 280px;
+}
+
+/* ----------------------------------------------------------------- */
+
+.item-8 {
+  width: 333px;
+  height: 268px;
+  border-radius: 8px;
+  border: 1px solid rgb(221, 215, 215);
+  position: relative;
+}
+
+.explore {
+  position: absolute;
+  color: white;
+  font-family: poppins;
+  font-size: 24px;
+  bottom: 50px;
+  left: 50px;
+}
+
+.icon {
+  position: absolute;
+  bottom: 90px;
+  left: 250px;
+}
+
+/* ----------------------------------------------------------------- */
+
+.content-section1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.content-section2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+@media only screen and (max-width: 375px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .content-section1 {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .content-section2 {
+    display: flex;
+    flex-direction: column;
+  }
+}
