--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -4,20 +4,20 @@
   margin: 0px;
   padding: 0px;
 }
-
-h1 {
-  text-align: center;
-  font-size: 40px;
-  color: #183b56;
+/* ----------------------------------------------------------------- */
+.header {
   font-family: poppins;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  font-size: 40px;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: #183b56;
+  font-weight: bold;
 }
 
-.hightlight {
-  background: linear-gradient(180deg, rgb(255, 255, 255) 50%, #f4a47c 50%);
+.style-job {
+  background: linear-gradient(0deg, #ff8345 50%, transparent 50%);
 }
-
 /* ----------------------------------------------------------------- */
 
 .item-1 {
@@ -333,6 +333,7 @@ h1 {
   align-items: center;
   gap: 20px;
   margin-bottom: 20px;
+  flex-wrap: wrap;
 }
 
 .content-section2 {
@@ -342,6 +343,7 @@ h1 {
   align-items: center;
   gap: 20px;
   margin-bottom: 20px;
+  flex-wrap: wrap;
 }
 
 @media only screen and (max-width: 375px) {
